--- a/index.html
+++ b/index.html
@@ -47,6 +47,13 @@
       <img class="sec-img accompany" src="photos/2018/usual_photo.jpg" alt="Robosub by the pool">
     </div> 
 
+<!-- Website redirect for RoboSub 2021 competition -->    
+  <section class="black">
+    <div class="col">
+      <h2 class="left">RoboSub 2021 Competition Website</h2>
+      <p class="sec-text left">For this year's competition, we are using another website for the official RoboSub submission, available here: https://robosubucr.weebly.com/</p>
+    </div>
+    
     <div class="col">
       <h2>The Project</h2>
       <p class="sec-text right">We are the University of California, Riverside's competitive autonomous underwater vehicle project, competing internationally in <a href="https://www.robonation.org/competition/robosub">RoboNation's RoboSub Competition</a>.</p>
