--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
       <h2 class="left">RoboSub 2021 Competition Website</h2>
       <p class="sec-text left">For this year's competition, we are using another website for the official RoboSub submission, available here: https://robosubucr.weebly.com/</p>
     </div>
+  </section>
     
     <div class="col">
       <h2>The Project</h2>
