--- a/index.html
+++ b/index.html
@@ -48,12 +48,13 @@
     </div> 
 
 <!-- Website redirect for RoboSub 2021 competition -->    
-  <section class="black">
+  <!-- <section class="black"> -->
     <div class="col">
       <h2 class="left">RoboSub 2021 Competition Website</h2>
       <p class="sec-text left">For this year's competition, we are using another website for the official RoboSub submission, available here: https://robosubucr.weebly.com/</p>
+      <br>
     </div>
-  </section>
+  <!-- </section> -->
     
     <div class="col">
       <h2>The Project</h2>
