--- a/index.html
+++ b/index.html
@@ -41,20 +41,20 @@
     </div>
   </header>
 
+<!-- Website redirect for RoboSub 2021 competition -->    
+  <section class="black">
+    <div class="col">
+      <h2 class="left">RoboSub 2021 Competition Website</h2>
+      <p class="sec-text left">For this year's competition, we are using another website for the official RoboSub submission, available <a href="https://robosubucr.weebly.com/">HERE.</a></p>
+      <br>
+    </div>
+  </section>
+
   <!-- What is RoboSub? -->
   <section class="grey">
     <div class="col">
       <img class="sec-img accompany" src="photos/2018/usual_photo.jpg" alt="Robosub by the pool">
     </div> 
-
-<!-- Website redirect for RoboSub 2021 competition -->    
-  <!-- <section class="black"> -->
-    <div class="col">
-      <h2 class="left">RoboSub 2021 Competition Website</h2>
-      <p class="sec-text left">For this year's competition, we are using another website for the official RoboSub submission, available here: https://robosubucr.weebly.com/</p>
-      <br>
-    </div>
-  <!-- </section> -->
     
     <div class="col">
       <h2>The Project</h2>
