--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <!-- Website redirect for RoboSub 2021 competition -->    
   <section class="red">
     <div class="col">
-      <h2 class="left">RoboSub 2021 Competition Website</h2>
+      <h2 class="centered">RoboSub 2021 Competition Website</h2>
       <p class="sec-text left">For this year's competition, we are using a different website for the official RoboSub submission, available <a href="https://robosubucr.weebly.com/">HERE.</a></p>
       <br>
     </div>
