--- a/index.html
+++ b/index.html
@@ -42,13 +42,15 @@
   </header>
 
 <!-- Website redirect for RoboSub 2021 competition -->    
-  <section class="red">
+  <div class="red">
     <!-- <div class="col"> -->
       <h2 class="centered">RoboSub 2021 Competition Website</h2>
+      <div class="new-website">
       <p class="sec-text left">For this year's competition, we are using a different website for the official RoboSub submission, available <a href="https://robosubucr.weebly.com/">HERE.</a></p>
       <br>
+    </div>
     <!-- </div> -->
-  </section>
+  </div>
 
   <!-- What is RoboSub? -->
   <section class="grey">
