--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- <div class="col"> -->
       <h2 class="centered">RoboSub 2021 Competition Website</h2>
       <div class="new-website">
-      <p class="sec-text left">For this year's competition, we are using a different website for the official RoboSub submission, available <a href="https://robosubucr.weebly.com/">HERE.</a></p>
+      <p class="sec-text left">For this year's competition, we are using a different website for our official RoboSub submission, available <a href="https://robosubucr.weebly.com/">HERE.</a></p>
       <br>
     </div>
     <!-- </div> -->
